<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_total_distance_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_distance"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/mtv_average_speed_info"
        app:layout_constraintEnd_toEndOf="@id/mtv_total_distance"
        app:layout_constraintStart_toStartOf="@id/mtv_total_distance"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_total_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero_km"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/mtv_total_distance_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/gl_1" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_average_speed_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_distance"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/gl_2"
        app:layout_constraintEnd_toEndOf="@id/mtv_average_speed"
        app:layout_constraintStart_toStartOf="@id/mtv_average_speed"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_average_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero_kmh"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/mtv_average_speed_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/gl_1" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_total_time_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_time"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/mtv_total_calories_info"
        app:layout_constraintEnd_toEndOf="@id/mtv_total_time"
        app:layout_constraintStart_toStartOf="@id/mtv_total_time"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_total_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero_time"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/mtv_total_time_info"
        app:layout_constraintEnd_toEndOf="@id/gl_1"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_total_calories_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_calories_burned"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/gl_2"
        app:layout_constraintEnd_toEndOf="@id/mtv_total_time"
        app:layout_constraintStart_toStartOf="@id/mtv_total_time"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_total_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero_kcal"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/mtv_total_calories_info"
        app:layout_constraintEnd_toEndOf="@id/gl_1"
        app:layout_constraintStart_toStartOf="parent" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/line_chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mtv_average_speed_info" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>